# zalgolib

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
src/zalgolib/: __init__.py
zalgolib/: __init__.py  diacritics.py  sample_output.md  zalgolib.py
zalgolibpy/: diacritics.py  zalgolibpy.py
