[metadata]
name = zalgolib
description = a Python library for a "FULL" Zalgo experience
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
version = attr: zalgolib.__version__
url = https://github.com/jivanyatra/zalgolib
author = Yatri Trivedi
author_email = jivanyatra@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Text Processing :: General
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Source = https://github.com/jivanyatra/zalgolib

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools
